# flood_fill_filter

./: .gitignore  .travis.yml  Changelog.md  README.md  README.rst  README_ru.rst  conftest.py  profile.sh  setup.cfg  setup.py  test_c.sh  test_py.sh
c/: README.md  boolean_flood_fill.h  build.sh  flood.c  streams.h  window_flood_fill_filter.h
c/LorhanSohaky_Stack/: GenericField.c  GenericField.h  README.md  Stack.c  Stack.h  stack_example.c
flood_fill_filter/: __init__.py  __main__.py  flood.py  flood_test.py  linear_srgb_conv.py  linear_srgb_conv_test.py
flood_fill_filter/private/: __init__.py  calculations.py  calculations_test.py  xyz.py  xyz_loader.py
new_implementation/: flood.py  linear_srgb_conv.py  linear_srgb_conv_test.py  xyz.py  xyz_loader.py
python_prototype/: flood.py
python_prototype/utils/: boolean_flood_fill.py  streams.py  window_flood_fill_filter.py
samples3/: xm20_eq_offsets.csv
