[metadata]
name = flood_fill_filter
version = 0.8.0
description = Pixel-accurate JPEG-noise-resistant edge detection algorithm.
url = https://github.com/georgy7/flood_fill_filter
author = Georgy Ustinov
author_email = httpcatharsis@gmail.com
license = MPL-2.0
license_file = LICENSE

[options]
packages = find:
install_requires =
    pillow
    numpy
zip_safe = True

[options.packages.find]
exclude =
    samples

[options.entry_points]
console_scripts =
    flood_fill_filter = flood_fill_filter.__main__:main

[aliases]
test = pytest

[tool:pytest]
addopts = -v
