[metadata]
name = flood_fill_filter
version = 1.2.4
description = JPEG-noise resistant edge density detection tool.
long_description = file: README.rst
url = https://github.com/georgy7/flood_fill_filter
author = Georgy Ustinov
author_email = georgy.ustinov.hello@gmail.com
license = AGPL-3.0-or-later
license_file = COPYING

[options]
packages = find:
install_requires =
    pillow
    numpy
zip_safe = True

[options.packages.find]
exclude =
    samples
    samples2

[options.entry_points]
console_scripts =
    flood_fill_filter = flood_fill_filter.__main__:main

[aliases]
test = pytest

[tool:pytest]
addopts = -v
